<?xml version="1.0"?>
<package format="2">
  <name>arduinobot_controller</name>
  <version>0.0.0</version>
  <description>The arduinobot_controller package</description>

  <maintainer email="antonio.brandi@outlook.it">Antonio Brandi</maintainer>

  <license>BSD</license>

  <author email="antonio.brandi@outlook.it">Antonio Brandi</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>controller_manager</exec_depend>

</package>
