<package>

  <name>arduinobot_kinematic</name>
  <version>0.3.0</version>
  <description>
     None
  </description>
  <author email="antonio.brandi@outlook.it">antonio brandi</author>
  <maintainer email="antonio.brandi@outlook.it">antonio brandi</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>


  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>xacro</run_depend>
  <!-- This package is referenced in the warehouse launch files, but does not build out of the box at the moment. Commented the dependency until this works. -->
  <!-- <run_depend>warehouse_ros_mongo</run_depend> -->
  <run_depend>arduinobot_description</run_depend>


</package>
