<?xml version="1.0"?>
<package format="2">
  <name>arduinobot_remote</name>
  <version>0.0.0</version>
  <description>The arduinobot_remote package</description>

  <maintainer email="antonio.brandi@todo.com">Antonio Brandi</maintainer>

  <license>BSD</license>

  <author email="antonio.brandi@todo.com">Antonio Brandi</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>actionlib</exec_depend>
  
</package>
